ok, clean code, match index and score, run perfectly

--- a/notebooks/crisp-dm-methodology-for-a-customer-churn.ipynb
+++ b/notebooks/crisp-dm-methodology-for-a-customer-churn.ipynb
@@ -934,12 +934,12 @@
     "tags": []
    },
    "source": [
-    "4.1：Huấn luyện và dự đoán mô hình"
+    "4.1：Tách train test và chuẩn hóa dữ liệu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3cb1edd6",
    "metadata": {
     "execution": {
@@ -959,18 +959,17 @@
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['customerID'] not found in axis\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Tách X và y TRƯỚC KHI xử lý missing values\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m X = \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcustomerID\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mChurn\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtarget\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m y = df[\u001b[33m'\u001b[39m\u001b[33mtarget\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Chia tập dữ liệu thành tập huấn luyện và tập kiểm tra\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:5603\u001b[39m, in \u001b[36mDataFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   5455\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdrop\u001b[39m(\n\u001b[32m   5456\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   5457\u001b[39m     labels: IndexLabel | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m   5464\u001b[39m     errors: IgnoreRaise = \u001b[33m\"\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   5465\u001b[39m ) -> DataFrame | \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   5466\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   5467\u001b[39m \u001b[33;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[32m   5468\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   5601\u001b[39m \u001b[33;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[32m   5602\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m5603\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   5604\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5605\u001b[39m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5606\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5607\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5608\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5609\u001b[39m \u001b[43m        \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5610\u001b[39m \u001b[43m        \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5611\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\generic.py:4810\u001b[39m, in \u001b[36mNDFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   4808\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes.items():\n\u001b[32m   4809\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4810\u001b[39m         obj = \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_drop_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4812\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[32m   4813\u001b[39m     \u001b[38;5;28mself\u001b[39m._update_inplace(obj)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\generic.py:4852\u001b[39m, in \u001b[36mNDFrame._drop_axis\u001b[39m\u001b[34m(self, labels, axis, level, errors, only_slice)\u001b[39m\n\u001b[32m   4850\u001b[39m         new_axis = axis.drop(labels, level=level, errors=errors)\n\u001b[32m   4851\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4852\u001b[39m         new_axis = \u001b[43maxis\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4853\u001b[39m     indexer = axis.get_indexer(new_axis)\n\u001b[32m   4855\u001b[39m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[32m   4856\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\File hoc phan\\File hoc phan\\Khai thac du lieu\\Project\\Customer-churn-classification\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:7136\u001b[39m, in \u001b[36mIndex.drop\u001b[39m\u001b[34m(self, labels, errors)\u001b[39m\n\u001b[32m   7134\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mask.any():\n\u001b[32m   7135\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m errors != \u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m7136\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask].tolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not found in axis\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   7137\u001b[39m     indexer = indexer[~mask]\n\u001b[32m   7138\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.delete(indexer)\n",
-      "\u001b[31mKeyError\u001b[39m: \"['customerID'] not found in axis\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "💧 Đã fill missing values:\n",
+      "Train: 0 missing\n",
+      "Test: 0 missing\n",
+      "✅ Đã khởi tạo StandardScaler (chưa fit)\n",
+      "✅ Đã chuẩn hóa dữ liệu với scaler\n",
+      "Số features: 30\n",
+      "Tập train: (5634, 30), Tập test: (1409, 30)\n"
      ]
     }
    ],
@@ -1030,181 +1029,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97687b76",
-   "metadata": {
-    "papermill": {
-     "duration": 0.014276,
-     "end_time": "2025-11-22T11:51:19.753815",
-     "exception": false,
-     "start_time": "2025-11-22T11:51:19.739539",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "feb8630c",
+   "metadata": {},
    "source": [
-    "4.2：Ngưỡng cơ sở (baseline) (định mức mặc định 0.5)"
+    "4.2 Huấn luyện mô hình"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb4b460e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-11-22T11:51:19.784491Z",
-     "iopub.status.busy": "2025-11-22T11:51:19.782798Z",
-     "iopub.status.idle": "2025-11-22T11:51:20.484623Z",
-     "shell.execute_reply": "2025-11-22T11:51:20.483098Z"
-    },
-    "papermill": {
-     "duration": 0.71873,
-     "end_time": "2025-11-22T11:51:20.486582",
-     "exception": false,
-     "start_time": "2025-11-22T11:51:19.767852",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Độ chính xác: 0.8105039034776437\n",
-      "Ma trận nhầm lẫn:\n",
-      " [[925  90]\n",
-      " [177 217]]\n",
-      "Báo cáo phân loại:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.84      0.91      0.87      1015\n",
-      "           1       0.71      0.55      0.62       394\n",
-      "\n",
-      "    accuracy                           0.81      1409\n",
-      "   macro avg       0.77      0.73      0.75      1409\n",
-      "weighted avg       0.80      0.81      0.80      1409\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
-    "\n",
-    "\n",
-    "# Mô hình hóa (Hồi quy Logistic là ví dụ phân loại nhị phân)\n",
-    "#Logistic Regression là 1 mô hình đơn giản, dễ hiểu và thường được sử dụng làm baseline\n",
-    "model = LogisticRegression(max_iter=1000)\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Dự đoán\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Đánh giá\n",
-    "print(\"Độ chính xác:\", accuracy_score(y_test, y_pred))\n",
-    "print(\"Ma trận nhầm lẫn:\\n\", confusion_matrix(y_test, y_pred))\n",
-    "print(\"Báo cáo phân loại:\\n\", classification_report(y_test, y_pred))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db5fba75",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013393,
-     "end_time": "2025-11-22T11:51:20.514360",
-     "exception": false,
-     "start_time": "2025-11-22T11:51:20.500967",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "4.3：Điều chỉnh ngưỡng (threshold)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2203b158",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-11-22T11:51:20.545767Z",
-     "iopub.status.busy": "2025-11-22T11:51:20.545328Z",
-     "iopub.status.idle": "2025-11-22T11:51:20.571221Z",
-     "shell.execute_reply": "2025-11-22T11:51:20.569897Z"
-    },
-    "papermill": {
-     "duration": 0.043198,
-     "end_time": "2025-11-22T11:51:20.573048",
-     "exception": false,
-     "start_time": "2025-11-22T11:51:20.529850",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ma trận nhầm lẫn:\n",
-      " [[863 152]\n",
-      " [126 268]]\n",
-      "Báo cáo phân loại:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.87      0.85      0.86      1015\n",
-      "           1       0.64      0.68      0.66       394\n",
-      "\n",
-      "    accuracy                           0.80      1409\n",
-      "   macro avg       0.76      0.77      0.76      1409\n",
-      "weighted avg       0.81      0.80      0.80      1409\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "# Lấy xác suất dự đoán\n",
-    "y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "# Điều chỉnh ngưỡng (ví dụ, xuống 0.4)\n",
-    "threshold = 0.4\n",
-    "y_pred_adj = (y_pred_proba >= threshold).astype(int)\n",
-    "\n",
-    "# Đánh giá lại\n",
-    "print(\"Ma trận nhầm lẫn:\\n\", confusion_matrix(y_test, y_pred_adj))\n",
-    "print(\"Báo cáo phân loại:\\n\", classification_report(y_test, y_pred_adj))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d7375e2",
-   "metadata": {
-    "papermill": {
-     "duration": 0.014423,
-     "end_time": "2025-11-22T11:54:41.678314",
-     "exception": false,
-     "start_time": "2025-11-22T11:54:41.663891",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "Mô hình này hoạt động tốt hơn một chút so với Hồi quy Logistic, đặc biệt với recall 0.79, chỉ ra rằng mô hình có thể bắt được hầu hết các trường hợp churn."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cfb9bce6",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8413c24a",
    "metadata": {
     "execution": {
@@ -1437,19 +1270,27 @@
     "tags": []
    },
    "source": [
-    "Hồi quy Logistic\n",
-    "Recall = 0.82 → Khả năng cao nhất để nhận diện các trường hợp churn, với rất ít trường hợp bỏ sót.\n",
-    "Độ chính xác dương = 0.53 → Nhiều dương tính giả hơn; chỉ khoảng một nửa số khách hàng được dự đoán là churn thực sự churn.\n",
+    "Đánh giá và so sánh hai mô hình: Logistic Regression và RandomForest\n",
     "\n",
-    "Ưu điểm: Khả năng giải thích mạnh, thể hiện rõ những đặc trưng nào thúc đẩy rủi ro churn.\n",
+    "Dựa trên các chỉ số đánh giá (Accuracy, Precision, Recall, F1-score), mô hình RandomForest cho kết quả tổng thể tốt hơn so với Logistic Regression.\n",
     "\n",
-    "Random Forest\n",
-    "Độ chính xác = 0.79 → Độ chính xác dự đoán tổng thể cao hơn.\n",
-    "Độ chính xác dương = 0.57 → Tốt hơn một chút so với Hồi quy Logistic, với ít dương tính giả hơn.\n",
+    "1. So sánh chỉ số\n",
     "\n",
-    "Recall = 0.79 → Duy trì recall cao, bắt được hầu hết các trường hợp churn.\n",
+    "Accuracy: RandomForest (0.77) cao hơn Logistic Regression (0.75).\n",
     "\n",
-    "Ưu điểm: Hiệu suất tổng thể vững chắc hơn, phù hợp cho triển khai kinh doanh."
+    "Precision: RandomForest cao hơn (0.58 > 0.53).\n",
+    "\n",
+    "Recall: Logistic Regression cao hơn (0.79 > 0.74).\n",
+    "\n",
+    "F1-score: RandomForest nhỉnh hơn (0.65 > 0.64).\n",
+    "\n",
+    "2. Kết luận\n",
+    "\n",
+    "RandomForest là mô hình tốt hơn tổng thể, nhờ precision, accuracy và F1-score cao hơn.\n",
+    "\n",
+    "Logistic Regression chỉ vượt trội về Recall, phù hợp nếu mục tiêu ưu tiên phát hiện tối đa các trường hợp dương tính (ví dụ: khách hàng có khả năng churn).\n",
+    "\n",
+    "→ Do đó, mô hình được lựa chọn nên là RandomForest."
    ]
   },
   {
@@ -1466,8 +1307,12 @@
     "tags": []
    },
    "source": [
-    "So sánh mô hình (Giải thích kinh doanh)\n",
-    "RandomForest đạt AUC cao hơn (0.79) so với Hồi quy Logistic (0.78), chỉ ra khả năng mạnh hơn để phân biệt khách hàng churn so với không churn. Hồi quy Logistic vẫn có giá trị cho khả năng giải thích, thể hiện những đặc trưng nào ảnh hưởng nhiều nhất đến churn. Trong thực tế, RandomForest được khuyến nghị triển khai do hiệu suất dự đoán tốt hơn, trong khi Hồi quy Logistic có thể hỗ trợ giao tiếp với các bên liên quan và hiểu biết về đặc trưng."
+    "So sánh ROC (AUC):\n",
+    "- AUC = 0.76 cho cả hai → mô hình có khả năng phân biệt giữa lớp 0 và lớp 1 ở mức khá.\n",
+    "- Đoạn đầu đường cong Logistic nằm cao hơn RandomForest, nghĩa là Logistic có tỷ lệ đúng thực (TPR) cao hơn khi tỷ lệ sai (FPR) còn thấp.\n",
+    "=> Phù hợp với việc Logistic đạt Recall lớp 1 cao hơn.\n",
+    "- Hồi quy Logistic tốt hơn khi cần ưu tiên phát hiện đúng lớp dương tính ở giai đoạn đầu (low FPR).\n",
+    "- RandomForest thể hiện độ ổn định và cân bằng tốt hơn khi xem toàn bộ vùng ROC."
    ]
   },
   {
@@ -1487,7 +1332,7 @@
     "Giai đoạn 6: Triển khai\n",
     "\n",
     "6.1 Triển khai mô hình\n",
-    "Chọn mô hình cuối cùng: Dựa trên đánh giá ở Giai đoạn 5, bộ phân loại Random Forest được khuyến nghị làm mô hình dự đoán chính (AUC = 0.79, thể hiện hiệu suất vượt trội). Hồi quy Logistic vẫn có giá trị là mô hình bổ sung cho khả năng giải thích, giúp các bên liên quan hiểu được những đặc trưng nào ảnh hưởng mạnh nhất đến churn.\n",
+    "Chọn mô hình cuối cùng: Dựa trên đánh giá ở Giai đoạn 5, bộ phân loại Random Forest được khuyến nghị làm mô hình dự đoán chính. Hồi quy Logistic vẫn có giá trị là mô hình bổ sung cho khả năng giải thích, giúp các bên liên quan hiểu được những đặc trưng nào ảnh hưởng mạnh nhất đến churn.\n",
     "\n",
     "Cân nhắc khi triển khai:\n",
     "- Phạm vi: Bắt đầu với môi trường kiểm soát hoặc các phân khúc khách hàng thí điểm để xác thực hiệu suất và đánh giá tác động kinh doanh trước khi triển khai toàn diện.\n",
@@ -1505,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b0d66ca4",
    "metadata": {
     "execution": {
@@ -1588,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5d6b1dfb",
    "metadata": {},
    "outputs": [
